# FoodDelivery

./: .gitignore  CMakeLists.txt  README.md  librarytest.c  main.c  musteri.c  notlar.md  restoran.c  restoran.db  restoranoku.c
images/: readme.md
include/: README.md  callback.c  callback.h  database.c  database.h  helper.c  helper.h  struct.h
include/app/: menu.c  menu.h  mode.c  mode.h  orders.c  orders.h
